--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <noWarn>1591</noWarn>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -12,11 +12,11 @@
     <SonarQubeTestProject>false</SonarQubeTestProject>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.400.0" />
-    <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.401.0" />
-    <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.400.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.413.0" />
-    <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.400.0" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.800.0-alpha.653-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.800.0-alpha.2182-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.800.0-alpha.1593-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.800.0-alpha.12831-net8" />
+    <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.800.0-alpha.170-pt-14740-net8" />
   </ItemGroup>
 </Project>
