--- a/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -13,10 +13,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.800.0-alpha.12831-net8" />
-    <PackageReference Include="VirtoCommerce.Platform.Hangfire" Version="3.800.0-alpha.12831-net8" />
-    <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.800.0-alpha.177-pt-14740-net8" />
-    <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.800.0-alpha.676-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Hangfire" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.800.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
