--- a/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
+++ b/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.800.0-alpha.1306-pt-14740-net8" />
-    <PackageReference Include="VirtoCommerce.XPurchase" Version="3.800.0-alpha.1306-pt-14740-net8" />
+    <PackageReference Include="VirtoCommerce.ExperienceApiModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.XPurchase" Version="3.800.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
