--- a/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
+++ b/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.FileExperienceApi.Data" Version="3.800.0-alpha.23-vcst-121" />
+    <PackageReference Include="VirtoCommerce.FileExperienceApi.Data" Version="3.800.0" />
     <PackageReference Include="VirtoCommerce.XPurchase" Version="3.800.0" />
   </ItemGroup>
   <ItemGroup>
