--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -13,10 +13,10 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.810.0-alpha.689-vcst-1416" />
     <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.800.0" />
     <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.825.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.841.0" />
     <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.800.0" />
   </ItemGroup>
 </Project>
