--- a/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
+++ b/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.FileExperienceApi.Data" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.XPurchase" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.FileExperienceApi.Data" Version="3.803.0" />
+    <PackageReference Include="VirtoCommerce.OrdersModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.XCart.Data" Version="3.800.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
