--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.810.0" />
     <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.800.0" />
     <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.861.0-alpha.12998-vcst-2048" />
+    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.861.0" />
     <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.800.0" />
   </ItemGroup>
 </Project>
