--- a/tests/VirtoCommerce.QuoteModule.Tests/VirtoCommerce.QuoteModule.Tests.csproj
+++ b/tests/VirtoCommerce.QuoteModule.Tests/VirtoCommerce.QuoteModule.Tests.csproj
@@ -4,6 +4,7 @@
     <noWarn>1591</noWarn>
     <LangVersion>latest</LangVersion>
     <IsPackable>False</IsPackable>
+    <NoWarn>NU1903</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Properties\**" />
