--- a/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
+++ b/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
@@ -8,10 +8,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.FileExperienceApi.Data" Version="3.803.0" />
+    <PackageReference Include="VirtoCommerce.FileExperienceApi.Data" Version="3.806.0-alpha.33-vcst-2376-update-graphql" />
     <PackageReference Include="VirtoCommerce.OrdersModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.Xapi.Core" Version="3.814.0" />
-    <PackageReference Include="VirtoCommerce.XCart.Data" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.Xapi.Core" Version="3.816.0-alpha.74-vcst-2376-update-graphql" />
+    <PackageReference Include="VirtoCommerce.XCatalog.Core" Version="3.822.0-alpha.61-vcst-2376-update-graphql" />
+    <PackageReference Include="VirtoCommerce.XCart.Data" Version="3.823.0-alpha.63-vcst-2376-update-graphql" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
