--- a/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
+++ b/src/VirtoCommerce.QuoteModule.ExperienceApi/VirtoCommerce.QuoteModule.ExperienceApi.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="VirtoCommerce.Xapi.Core" Version="3.900.0" />
     <PackageReference Include="VirtoCommerce.XCatalog.Core" Version="3.900.0" />
     <PackageReference Include="VirtoCommerce.XCart.Data" Version="3.900.0" />
+    <PackageReference Include="VirtoCommerce.CustomerModule.Core" Version="3.817.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VirtoCommerce.QuoteModule.Core\VirtoCommerce.QuoteModule.Core.csproj" />
