--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <noWarn>1591</noWarn>
@@ -14,9 +14,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.810.0" />
-    <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.800.0" />
-    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.861.0" />
+    <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.847.0-alpha.2304-vcst-2821" />
+    <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.816.0" />
+    <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.877.0" />
     <PackageReference Include="VirtoCommerce.TaxModule.Core" Version="3.800.0" />
   </ItemGroup>
 </Project>
