--- a/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
+++ b/src/VirtoCommerce.QuoteModule.Core/VirtoCommerce.QuoteModule.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <noWarn>1591</noWarn>
@@ -13,7 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
-    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.810.0" />
+    <PackageReference Include="VirtoCommerce.CartModule.Core" Version="3.826.0" />
     <PackageReference Include="VirtoCommerce.CatalogModule.Core" Version="3.850.0" />
     <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.816.0" />
     <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.877.0" />
