--- a/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
+++ b/src/VirtoCommerce.QuoteModule.Data/VirtoCommerce.QuoteModule.Data.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <noWarn>1591</noWarn>
@@ -15,7 +15,7 @@
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.877.0" />
     <PackageReference Include="VirtoCommerce.Platform.Hangfire" Version="3.877.0" />
-    <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.800.0" />
+    <PackageReference Include="VirtoCommerce.ShippingModule.Core" Version="3.802.0" />
     <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.813.0" />
   </ItemGroup>
   <ItemGroup>
